html transition done

--- a/index.html
+++ b/index.html
@@ -193,7 +193,24 @@
                         </div>
                         <div class="footer-container fade">
                             <form method="post" action="logika/posaljiporuku.php">
-                                
+                                <table>
+                                    <tr>
+                                        <td><i class="fas fa-phone fa-2x"></i></td>
+                                        <td><a href="tel:+381603388389">+381 60 33 88 389</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="fab fa-skype fa-2x"></i></td>
+                                        <td>live:aleksandar.vukojevicc</td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="fab fa-viber fa-2x"></i></td>
+                                        <td><a href="viber://chat?number=381603388390">+381 60 33 88 389</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="far fa-envelope fa-2x"></i></td>
+                                        <td><a href="mailto:aleksandar.vukojevicc@gmail.com">aleksandar.vukojevicc@gmail.com</a></td>
+                                    </tr>
+                                </table>
                             </form>
                         </div>
                         <p class="copyrights">
