--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
                                         <td>live:aleksandar.vukojevicc</td>
                                     </tr>
                                     <tr>
+                                        <td><i class="fab fa-whatsapp fa-2x"></i></td>
+                                        <td><a href="https://api.whatsapp.com/send?phone=381603388390">+381 60 33 88 389</a></td>
+                                    </tr>
+                                    <tr>
                                         <td><i class="fab fa-viber fa-2x"></i></td>
                                         <td><a href="viber://chat?number=381603388390">+381 60 33 88 389</a></td>
                                     </tr>
