technologies menu item

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                         <a href="#technologies" class="anchor-scroll">
                             <li>about me</li>
                         </a>
+                        <a href="#languages" class="anchor-scroll">
+                            <li>technologies</li>
+                        </a>
                         <a href="#projects" class="anchor-scroll">
                             <li>projects</li>
                         </a>
@@ -74,6 +77,9 @@
                     <ul>
                         <a href="#technologies" class="anchor-scroll">
                             <li>about me</li>
+                        </a>
+                        <a href="#languages" class="anchor-scroll">
+                            <li>technologies</li>
                         </a>
                         <a href="#projects" class="anchor-scroll">
                             <li>projects</li>
@@ -138,7 +144,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="languages">
+                <div class="languages" id="languages">
                     <div class="container">
                         <div class="card card1 vertical-alignment-parent fade">
                             <h2>front&nbsp;end</h2>
