image for forum changed

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <section class="projects" id="projects">
                     <a href="https://mihabodytec-batajnica.rs/" target="_blank" class="project fade"><img src="imgs/maciphonemiha.png" alt="project1"></a>
                     <a href="http://dubinskopranjezemun.com/" target="_blank" class="project fade"><img src="imgs/dubinskosve.png" alt="project2"></a>
-                    <a href="http://airsoftforum.rs/" target="_blank" class="project fade"><img src="imgs/airsoft.png" alt="project3"></a>
+                    <a href="http://airsoftforum.rs/" target="_blank" class="project fade"><img src="imgs/forum.png" alt="project3"></a>
                     <a href="https://stakecasinobalkan.com/" target="_blank" class="project fade"><img src="imgs/stakecasino.png" alt="project4"></a>
                 </section>
                 <footer class="contact" id="contact">
