--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     </head>
     <div class="overflow">
 
+        <div class="loader">
+            <img src="imgs/logowhite.png" alt="logo loader animation">
+        </div>
+
         <body>
             <header class="small-header header fixed" id="z-index">
                 <div class="header-container" id="top">
